--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.0"
   }
 }
